   
  MAHOUT-1209: DRY out maven-compiler-plugin configuration (Stevo Slavic via smarthi) 

  MAHOUT-1207: Fix typos in description in parent pom (Stevo Slavic via smarthi)  

  MAHOUT-1199: Improve javadoc comments of mahout-integration (Angel Martinez Gonzalez via smarthi)  

  MAHOUT-1162: Adding BallKMeans and StreamingKMeans clustering algorithms (dfilimon)

  MAHOUT-1205: ParallelALSFactorizationJob should leverage the distributed cache (ssc)

  MAHOUT-1156: Adding nearest neighbor Searchers (dfilimon)

  MAHOUT-1202: Speed up Vector operations (dfilimon)

  MAHOUT-1155: Make MatrixSlice a Vector (and fix Centroid cloning; MAHOUT-1202) (dfilimon)

  MAHOUT-1189: CosineDistanceMeasure doesn't return 0 for two 0 vectors (dfilimon)

  MAHOUT-1180: Multinomial<T> throws ConcurrentModificationException when iterating and setting probabilities (dfilimon)

  MAHOUT-1192: Speed up Vector Operations (robinanil)

  MAHOUT-1191: Cleanup Vector Benchmarks make it less variable (robinanil)

  MAHOUT-1190: SequentialAccessSparseVector function assignment is very slow and other iterator woes (robinanil)

  MAHOUT-1188: Inconsistent reference to Lucene versions in code and POM (smarthi)

  MAHOUT-1161: Unable to run CJKAnalyzer for conversion of a sequence file to sparse vector due to instantiation
               exception (ssc)

  MAHOUT-1187: Update Commons Lang to Commons Lang3 (smarthi)

  MAHOUT-1184 Another take at pmd, findbugs and checkstyle (ssc)

  MAHOUT-1182: Remove useless append (Dave Brosius via tdunning)

  MAHOUT-1176: Introduce a changelog file to raise contributors attribution (ssc)

  MAHOUT-1108: Allows cluster-reuters.sh example to be executed on a cluster (elmer.garduno via gsingers) 

  MAHOUT-961: Fix issue in decision forest tree visualizer to properly show stems of tree (Ikumasa Mukai via gsingers)

  MAHOUT-944: Create SequenceFiles out of Lucene document storage (no term vectors required) (Frank Scholten, gsingers)